# Python-SDK

./: README.md
samples/: .gitignore  README.md  config.py  get_holdings.py  get_positions.py  get_quote.py  oauth_exchange.py  order_book.py  order_status.py  place_order.py  pyproject.toml  quick_start.py  requirements.txt  sample_client.py  session_token.py  setup.py  streaming_market_data.py  streaming_quote.py  whoami.py
